5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1637_2443.log
== TEST (2019-04-11 10:15:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Qual o raio?"))
x = float(input("Altura: "))
opcao = int(input(("Qual? *(1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3
				
if (opcao == 2):
	mensagem = vesf - vcal
else:
	mensagem = vcal
				
print(round(mensagem, 4))
-- ERROR:
File "XXXX", line 8
    vesf = (4*pi*(r)**3)/3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:15:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Qual o raio?"))
x = float(input("Altura: "))
opcao = int(input(("Qual? *(1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3
				
if (opcao == 2):
	mensagem = vesf - vcal
else:
	mensagem = vcal
				
print(round(mensagem, 4))
-- EXECUTION TIME:
0.182721
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 8
    vesf = (4*pi*(r)**3)/3
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:15:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Qual o raio?"))
x = float(input("Altura: "))
opcao = int(input(("Qual? *(1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3
				
if (opcao == 2):
	mensagem = vesf - vcal

else:
	mensagem = vcal
				
print(round(mensagem, 4))
-- ERROR:
File "XXXX", line 8
    vesf = (4*pi*(r)**3)/3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:16:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Qual o raio?"))
x = float(input("Altura: "))
opcao = int(input("Qual? *(1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3
				
if (opcao == 2):
	mensagem = vesf - vcal

else:
	mensagem = vcal
				
print(round(mensagem, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:16:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Qual o raio?"))
x = float(input("Altura: "))
opcao = int(input("Qual? *(1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3
				
if (opcao == 2):
	mensagem = vesf - vcal

else:
	mensagem = vcal
				
print(round(mensagem, 4))
-- EXECUTION TIME:
0.23591
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
